[tool.poetry]
name = "betterreplitdb"
version = "0.0.4"
description = "Replit DB with a memcache"
authors = ["Dev380"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"
requests = "^2.25.1"
aiohttp-retry = "^2.8.3"
[tool.poetry.dev-dependencies]
twine = "^4.0.2"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
